sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
  ecart = lgr
  ^AlgCombSort:4: error: not found: value ecart
  if (ecart>1){
      ^AlgCombSort:5: error: not found: value ecart
    ecart = ecart / 1.3
    ^AlgCombSort:6: error: not found: value i
  i=0
  ^AlgCombSort:7: error: not found: value i
  while (i+ecart < lgr){
         ^AlgCombSort:7: error: not found: value ecart
  while (i+ecart < lgr){
           ^AlgCombSort:7: error: not found: value lgr
  while (i+ecart < lgr){
                   ^AlgCombSort:8: error: not found: value i
    if (i < i+ecart){
        ^AlgCombSort:8: error: not found: value i
    if (i < i+ecart){
            ^AlgCombSort:8: error: not found: value ecart
    if (i < i+ecart){
              ^AlgCombSort:9: error: not found: value i
      echange(i,i+ecart)
              ^AlgCombSort:9: error: not found: value i
      echange(i,i+ecart)
                ^AlgCombSort:9: error: not found: value ecart
      echange(i,i+ecart)
                  ^AlgCombSort:10: error: not found: value i
      i+=1
      ^